@@ -31,7 +31,7 @@ EXAMPLE1
      print "Count of Czech CPAN authors: $count\n";
 
      # Output:
-     # Count of Czech CPAN authors: 38
+     # Count of Czech CPAN authors: 39
 
 EXAMPLE2
      use strict;
@@ -76,19 +76,20 @@ EXAMPLE2
      #     [22] "PSME",
      #     [23] "RUR",
      #     [24] "RVASICEK",
-     #     [25] "SEIDLJAN",
-     #     [26] "SKIM",
-     #     [27] "SMRZ",
-     #     [28] "STRAKA",
-     #     [29] "TKR",
-     #     [30] "TRIPIE",
-     #     [31] "TYNOVSKY",
-     #     [32] "VARISD",
-     #     [33] "VASEKD",
-     #     [34] "YENYA",
-     #     [35] "ZABA",
-     #     [36] "ZEMAN",
-     #     [37] "ZOUL"
+     #     [25] "SARFY",
+     #     [26] "SEIDLJAN",
+     #     [27] "SKIM",
+     #     [28] "SMRZ",
+     #     [29] "STRAKA",
+     #     [30] "TKR",
+     #     [31] "TRIPIE",
+     #     [32] "TYNOVSKY",
+     #     [33] "VARISD",
+     #     [34] "VASEKD",
+     #     [35] "YENYA",
+     #     [36] "ZABA",
+     #     [37] "ZEMAN",
+     #     [38] "ZOUL"
      # ]
 
 DEPENDENCIES
