@@ -8,4 +8,4 @@ use Test::NoWarnings;
 # Test.
 my $obj = Acme::CPANAuthors->new('Czech');
 my $ret = $obj->count;
-is($ret, 38, 'Count of Czech CPAN authors.');
+is($ret, 39, 'Count of Czech CPAN authors.');
