@@ -11,7 +11,7 @@ my @ret = $obj->id;
 my @right_ret = ('CHOROBA', 'DANIELR', 'DANPEDER', 'DOUGLISH', 'HIHIK',
 	'HOLCAPEK', 'HPA', 'JANPAZ', 'JANPOM', 'JENDA', 'JIRA', 'JSPICAK', 'KLE',
 	'KOLCON', 'MAJLIS', 'MICHALS', 'MILSO', 'MJFO', 'PAJAS', 'PASKY', 'PEK',
-	'POPEL', 'PSME', 'RUR', 'RVASICEK', 'SEIDLJAN', 'SKIM', 'SMRZ', 'STRAKA',
-	'TKR', 'TRIPIE', 'TYNOVSKY', 'VARISD', 'VASEKD', 'YENYA', 'ZABA', 'ZEMAN',
-	'ZOUL');
+	'POPEL', 'PSME', 'RUR', 'RVASICEK', 'SARFY', 'SEIDLJAN', 'SKIM', 'SMRZ',
+	'STRAKA', 'TKR', 'TRIPIE', 'TYNOVSKY', 'VARISD', 'VASEKD', 'YENYA',
+	'ZABA', 'ZEMAN', 'ZOUL');
 is_deeply(\@ret, \@right_ret, 'CPAN authors ids.');
