@@ -1,4 +1,5 @@
 0.26
+ - Add SARFY CPAN account.
 
 0.25 2020-02-29T09:05:05+01:00
  - Update README.
